Desarrollo del curso.
Desarrollo de la calculadora con HTML5 y JavaScript (eventos en JavaScript).

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,15 +9,16 @@
         "esModuleInterop": true,
         "forceConsistentCasingInFileNames": true,
         "strict": true,
-        "strictNullChecks": true,
+        "strictNullChecks": false,
         "strictFunctionTypes": true,
-        "strictPropertyInitialization": true,
+        "strictPropertyInitialization": false,
         "skipLibCheck": true
     },
     "include": [
         "./src"
     ],
     "exclude": [
+        "./node_modules",
         "./wwwroot"
     ]
 }
