--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 # Visual Studio Code
 .vscode
 
-# Node modules
-node_modules/*
+# Módulos de Node.js
+node_modules
+
+# Variables de entorno.
+.env
 
 # Archivos JavaScript
-wwwroot/js
+package-lock.json
