--- a/package.json
+++ b/package.json
@@ -1,24 +1,28 @@
 {
   "name": "udemy-grover-vasquez-javascript",
+  "description": "Aprende como iniciarte en la programación utilizando JavaScript como lenguaje de programación.",
   "version": "1.0.0",
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node ./bin/www",
-    "test": "nodemon ./bin/www"
+    "dev": "node --watch ./app/bin/www",
+    "start": "node ./app/bin/www"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/EA-Proof-Of-Concept/udemy-grover-vasquez-javascript.git"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "javascript",
+    "node",
+    "udemy"
+  ],
+  "author": "Eric Adalberto Rodríguez Sánchez",
+  "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/EA-Proof-Of-Concept/udemy-grover-vasquez-javascript/issues"
   },
   "homepage": "https://github.com/EA-Proof-Of-Concept/udemy-grover-vasquez-javascript#readme",
-  "description": "Aprende como iniciarte en la Programación utilizando JavaScript como Lenguaje de Programación.",
   "dependencies": {
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
@@ -26,8 +30,5 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-handlebars": "^8.0.1"
-  },
-  "devDependencies": {
-    "@types/express": "^5.0.0"
   }
 }
